analogue Change Log

Version 0.6-26

	* abernethy: New data set containing the classic Abernethy Forest
	data of Birks and Mathewes (1978).

	* Stratiplot.formula: Preserves the names component as far as is
	possible.

	* chooseTaxa: Explicitly preserves row and column names.

	* DESCRIPTION: prematurely added princurve as a dependency in
	previous version.

Version 0.6-25

	* chooseTaxa: new function to select species on basis of number
	of occurrences and maximum abundance. Function is an S3 generic
	with a default method.

Version 0.6-24

	* Dependencies: package now depends on package 'grid'.

	* Stratiplot: gains ability to draw variable labels above the
	plot panels so that the plots conform to common standards. If
	you prefer the 'strips' of Lattice plots, set 'strip = TRUE'
	to get the old behaviour.

	Stratiplot was fixinging the min(ylim) value at 0 and contained
	redundant calls to set the y-axis limits. The behaviour has been
	rationalised and a new 'ylim' argument added. The default
	behaviour uses the range of the y-data for 'ylim'.

	* panel.Stratiplot: fix warning messages (from Grid) due to
	inappropriate colour specification. Reference lines in
	Stratiplot now plot correctly again.

	* plot.roc: was resetting the plotting region at the end of
	plotting even when there was no need to do so.

	* residuals: Residuals were defined as \hat{x}_i - x_i to match
	fitted vs. observed scatterplots. Definition of residuals in wa()
	and related functions has been changed to the more common
	definition of x_i - \hat{x}. Reported by Andreas Plank and Steve
	Juggins.

	* plot.wa: Following changed definition of residuals, plot.wa()
	now plots observed values on the y-axis and fitted values on the
	x-axis for 'which = 1'.

	* summary.predict.mat: print method was incorrectly extracting
	the model estimates for training set samples.

	* predict.wa: fix minor bug with CV when tolerance DW was used.

	* Package: reduced package check time in examples, by using